--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import org.apache.tools.ant.filters.ReplaceTokens
-
 buildscript {
 	dependencies {
 		classpath 'io.spring.gradle:spring-build-conventions:0.0.10.RELEASE'
@@ -15,38 +13,60 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'io.spring.convention.artifactory'
 apply plugin: 'io.spring.convention.root'
+apply plugin: 'io.spring.convention.springdependencymangement'
 
-description = 'Spring Session Maven Bill of Materials (BOM)'
 group = 'org.springframework.session'
+description = 'Spring Session Maven Bill of Materials (BOM)'
 
 configurations.archives.artifacts.clear()
 
-def txt = file('spring-session-bom.txt')
-def pom = file("$buildDir/poms/pom.xml")
-
 artifacts {
-	archives txt
-	archives(pom) {
-		type 'pom'
-	}
+	archives file('spring-session-bom.txt')
 }
 
-task generatePom() {
-	def srcDir = 'src'
-	def pomsDir = "$buildDir/poms"
+install {
+	repositories.mavenInstaller {
+		pom.whenConfigured { pom ->
+			pom.project {
+				packaging = 'pom'
+				name = project.description
+				description = project.description
+				url = 'https://projects.spring.io/spring-session/'
 
-	inputs.files fileTree(srcDir)
-	outputs.dir pomsDir
+				organization {
+					name = 'Pivotal Software, Inc.'
+					url = 'https://spring.io/'
+				}
 
-	doLast {
-		copy {
-			from srcDir
-			into pomsDir
-			filter(ReplaceTokens, tokens: [version: project.version])
+				licenses {
+					license {
+						name = 'Apache License, Version 2.0'
+						url = 'https://www.apache.org/licenses/LICENSE-2.0'
+						distribution = 'repo'
+					}
+				}
+
+				developers {
+					developer {
+						id = 'rwinch'
+						name = 'Rob Winch'
+						email = 'rwinch@pivotal.io'
+					}
+				}
+
+				scm {
+					url = 'https://github.com/spring-projects/spring-session-bom'
+					connection = 'scm:git:git@github.com/spring-projects/spring-session-bom.git'
+					developerConnection = 'scm:git:git@github.com/spring-projects/spring-session-bom.git'
+				}
+
+				issueManagement {
+					system = 'GitHub'
+					url = 'https://github.com/spring-projects/spring-session/issues'
+				}
+			}
 		}
 	}
 }
-
-install.dependsOn generatePom
 
 sonarqube.skipProject = true
