Fix invalid POM setup for uploadArchives
Closes gh-5

--- a/build.gradle
+++ b/build.gradle
@@ -27,23 +27,10 @@ dependencyManagement {
 	}
 }
 
-install {
-	repositories.mavenInstaller {
-		pom.whenConfigured { pom ->
-			customizePom(pom, project)
-		}
-	}
-}
+def installer = install.repositories.mavenInstaller
+def deployer = uploadArchives.repositories.mavenDeployer
 
-uploadArchives {
-	repositories.mavenInstaller {
-		pom.whenConfigured { pom ->
-			customizePom(pom, project)
-		}
-	}
-}
-
-def customizePom(pom, project) {
+[installer, deployer]*.pom*.whenConfigured { pom ->
 	pom.project {
 		packaging = 'pom'
 		name = project.description
