--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,7 @@
 ext {
 	coreVersion = '2.0.2.RELEASE'
+	dataGemFireVersion = '2.0.2.RELEASE'
+	dataGeodeVersion = '2.0.2.RELEASE'
 	dataMongoDbVersion = '2.0.2.RELEASE'
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
@@ -9,6 +11,8 @@ ext {
 dependencyManagement {
 	dependencies {
 		dependency "org.springframework.session:spring-session-core:$coreVersion"
+		dependency "org.springframework.session:spring-session-data-gemfire:$dataGemFireVersion"
+		dependency "org.springframework.session:spring-session-data-geode:$dataGeodeVersion"
 		dependency "org.springframework.session:spring-session-data-mongodb:$dataMongoDbVersion"
 		dependency "org.springframework.session:spring-session-data-redis:$dataRedisVersion"
 		dependency "org.springframework.session:spring-session-hazelcast:$hazelcastVersion"
