--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.0.4.RELEASE'
+	coreVersion = '2.1.0.BUILD-SNAPSHOT'
 	dataGeodeVersion = '2.0.2.RELEASE'
 	dataMongoDbVersion = '2.0.2.RELEASE'
 
