Upgrade Spring Session Data Geode to 2.1.0.M1
Closes gh-24

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
 	coreVersion = '2.1.0.BUILD-SNAPSHOT'
-	dataGeodeVersion = '2.0.5.RELEASE'
+	dataGeodeVersion = '2.1.0.M1'
 	dataMongoDbVersion = '2.0.3.RELEASE'
 
 	dataGemFireVersion = dataGeodeVersion
