--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.1.0.M2'
+	coreVersion = '2.1.0.BUILD-SNAPSHOT'
 	dataGeodeVersion = '2.0.5.RELEASE'
 	dataMongoDbVersion = '2.0.3.RELEASE'
 
