--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
 	dependencies {
-		classpath 'io.spring.gradle:spring-build-conventions:0.0.18.RELEASE'
+		classpath 'io.spring.gradle:spring-build-conventions:0.0.19.RELEASE'
 	}
 
 	repositories {
-		maven { url 'https://repo.spring.io/libs-snapshot/' }
-		maven { url 'https://repo.spring.io/plugins-snapshot/' }
+		gradlePluginPortal()
+		maven { url 'https://repo.spring.io/plugins-release/' }
 	}
 }
 
