--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,7 +1,7 @@
 ext {
 	coreVersion = '2.2.0.BUILD-SNAPSHOT'
 	dataGeodeVersion = '2.2.0.BUILD-SNAPSHOT'
-	dataMongoDbVersion = '2.1.1.RELEASE'
+	dataMongoDbVersion = '2.2.0.BUILD-SNAPSHOT'
 
 	dataGemFireVersion = dataGeodeVersion
 	dataRedisVersion = coreVersion
