Upgrade to Spring Session Data Geode 2.2.0.M1
Resolves gh-60

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
 	coreVersion = '2.2.0.BUILD-SNAPSHOT'
-	dataGeodeVersion = '2.2.0.BUILD-SNAPSHOT'
+	dataGeodeVersion = '2.2.0.M1'
 	dataMongoDbVersion = '2.1.1.RELEASE'
 
 	dataGemFireVersion = dataGeodeVersion
