--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.2.0.BUILD-SNAPSHOT'
+	coreVersion = '2.2.0.M3'
 	dataGeodeVersion = '2.2.0.M2'
 	dataMongoDbVersion = '2.2.0.M3'
 
