--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
-	coreVersion = '2.2.0.BUILD-SNAPSHOT'
-	dataGeodeVersion = '2.2.0.M3'
+	coreVersion = '2.2.0.M3'
+	dataGeodeVersion = '2.2.0.M4'
 	dataMongoDbVersion = '2.2.0.RC1'
 
 	dataGemFireVersion = dataGeodeVersion
