--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.2.0.M4'
+	coreVersion = '2.2.0.BUILD-SNAPSHOT'
 	dataGeodeVersion = '2.2.0.M4'
 	dataMongoDbVersion = '2.2.0.RC2'
 
