Upgrade Spring Session Data MongoDB to 2.2.0.RELEASE
Resolves: #84

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,7 +1,7 @@
 ext {
 	coreVersion = '2.2.0.RC1'
 	dataGeodeVersion = '2.2.0.M4'
-	dataMongoDbVersion = '2.2.0.RC2'
+	dataMongoDbVersion = '2.2.0.RELEASE'
 
 	dataGemFireVersion = dataGeodeVersion
 	dataRedisVersion = coreVersion
