--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.2.0.RC1'
+	coreVersion = '2.2.0.RELEASE'
 	dataGeodeVersion = '2.2.0.RC1'
 	dataMongoDbVersion = '2.2.0.RELEASE'
 	dataRedisVersion = coreVersion
