Upgrade Spring Session Data Geode to 2.2.0.RELEASE
Resolves: #91

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
 	coreVersion = '2.2.0.RELEASE'
-	dataGeodeVersion = '2.2.0.RC1'
+	dataGeodeVersion = '2.2.0.RELEASE'
 	dataMongoDbVersion = '2.2.0.RELEASE'
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
