--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,7 +1,7 @@
 ext {
 	coreVersion = '2.3.0.M1'
 	dataGeodeVersion = '2.3.0.M1'
-	dataMongoDbVersion = '2.2.1.RELEASE'
+	dataMongoDbVersion = '2.3.0.M1'
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
 	jdbcVersion = coreVersion
