--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
 	coreVersion = '2.3.0.M1'
-	dataGeodeVersion = '2.3.0.M2'
+	dataGeodeVersion = '2.3.0.RC1'
 	dataMongoDbVersion = '2.3.0.M2'
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
