Upgrade Spring Session core modules to 2.3.0.RELEASE
Resolves gh-118

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.3.0.RC1'
+	coreVersion = '2.3.0.RELEASE'
 	dataMongoDbVersion = '2.3.0.RC2'
 	dataGeodeVersion = '2.3.0.RC2'
 	dataRedisVersion = coreVersion
