Upgrade Spring Session core modules to 2.4.0-M1
Closes gh-126

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.3.0.RELEASE'
+	coreVersion = '2.4.0-M1'
 	dataMongoDbVersion = '2.3.0.RELEASE'
 	dataGeodeVersion = '2.3.0.RELEASE'
 	dataRedisVersion = coreVersion
