Upgrade to Spring Session for Apache Geode 2.4.0
Resolves gh-140

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,7 +1,7 @@
 ext {
 	coreVersion = '2.4.0-RC1'
 	dataMongoDbVersion = '2.4.0-RC1'
-	dataGeodeVersion = '2.4.0-RC1'
+	dataGeodeVersion = '2.4.0'
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
 	jdbcVersion = coreVersion
