Start building against Spring Session 2.5 snapshots
See: #145

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.4.1'
+	coreVersion = '2.5.0-SNAPSHOT'
 	dataMongoDbVersion = '2.4.1'
 	dataGeodeVersion = '2.4.0'
 	dataRedisVersion = coreVersion
