--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
 	coreVersion = '2.5.0-M1'
-	dataMongoDbVersion = '2.4.1'
+	dataMongoDbVersion = '2.5.0-M1'
 	dataGeodeVersion = '2.5.0-M1'
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
