--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.5.0-M1'
+	coreVersion = '2.5.0-RC1'
 	dataMongoDbVersion = '2.5.0-M2'
 	dataGeodeVersion = '2.5.0-M1'
 	dataRedisVersion = coreVersion
