--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,7 +1,7 @@
 ext {
 	coreVersion = '2.5.0-RC1'
 	dataMongoDbVersion = '2.5.0-RC1'
-	dataGeodeVersion = '2.5.0-M1'
+	dataGeodeVersion = '2.5.0-RC1'
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
 	jdbcVersion = coreVersion
