Upgrade Spring Session core modules to 2.5.0
Closes gh-170

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.5.0-RC1'
+	coreVersion = '2.5.0'
 	dataMongoDbVersion = '2.5.0-RC1'
 	dataGeodeVersion = '2.5.0-RC1'
 	dataRedisVersion = coreVersion
