Upgrade Spring Session Data MongoDB to 2.5.0
Closes gh-172

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
 	coreVersion = '2.5.0'
-	dataMongoDbVersion = '2.5.0-RC1'
+	dataMongoDbVersion = '2.5.0'
 	dataGeodeVersion = '2.5.0'
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
