--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 	dependencies {
 		classpath 'io.spring.gradle:spring-build-conventions:0.0.37'
-		classpath 'io.spring.nohttp:nohttp-gradle:0.0.6.RELEASE'
+		classpath 'io.spring.nohttp:nohttp-gradle:0.0.8'
 	}
 
 	repositories {
