--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,7 +1,7 @@
 ext {
-	coreVersion = '2.6.0-M1'
-	dataMongoDbVersion = '2.5.0'
-	dataGeodeVersion = '2.6.0-M1'
+	coreVersion = '2.6.0-SNAPSHOT'
+	dataMongoDbVersion = '2.5.1-SNAPSHOT'
+	dataGeodeVersion = '2.6.0-SNAPSHOT'
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
 	jdbcVersion = coreVersion
