Upgrade Spring Session core modules to 2.4.6
Closes gh-183

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.4.6-SNAPSHOT'
+	coreVersion = '2.4.6'
 	dataMongoDbVersion = '2.4.5-SNAPSHOT'
 	dataGeodeVersion = '2.4.8-SNAPSHOT'
 	dataRedisVersion = coreVersion
