Upgrade Spring Session core modules to 2.5.3
Closes gh-184

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.5.3-SNAPSHOT'
+	coreVersion = '2.5.3'
 	dataMongoDbVersion = '2.5.1-SNAPSHOT'
 	dataGeodeVersion = '2.5.5-SNAPSHOT'
 	dataRedisVersion = coreVersion
