Use Spring Session Data MongoDB 2.5.0

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
 	coreVersion = '2.5.3'
-	dataMongoDbVersion = '2.5.1-SNAPSHOT'
+	dataMongoDbVersion = '2.5.0'
 	dataGeodeVersion = '2.5.5-SNAPSHOT'
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
