--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,7 +1,7 @@
 ext {
 	coreVersion = '2.4.6'
 	dataMongoDbVersion = '2.4.4'
-	dataGeodeVersion = '2.4.8-SNAPSHOT'
+	dataGeodeVersion = '2.4.8'
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
 	jdbcVersion = coreVersion
