--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.5.4-SNAPSHOT'
+	coreVersion = '2.5.4'
 	dataMongoDbVersion = '2.5.0'
 	dataGeodeVersion = '2.5.6-SNAPSHOT'
 	dataRedisVersion = coreVersion
