Upgrade Spring Session core modules to 2.6.1
Closes gh-194

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.6.1-SNAPSHOT'
+	coreVersion = '2.6.1'
 	dataGeodeVersion = '2.6.1-SNAPSHOT'
 	dataMongoDbVersion = coreVersion
 	dataRedisVersion = coreVersion
