--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
 	coreVersion = '3.0.0-M1'
-	dataGeodeVersion = '3.0.0-SNAPSHOT'
+	dataGeodeVersion = '3.0.0-M1'
 	dataMongoDbVersion = coreVersion
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
