--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
 	coreVersion = '2.6.3-SNAPSHOT'
-	dataGeodeVersion = '2.6.1-SNAPSHOT'
+	dataGeodeVersion = '2.6.1'
 	dataMongoDbVersion = coreVersion
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
