Upgrade to Spring Session core 2.7.0-RC1

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.7.0-M1'
+	coreVersion = '2.7.0-RC1'
 	dataGeodeVersion = '2.7.0-M2'
 	dataMongoDbVersion = coreVersion
 	dataRedisVersion = coreVersion
