--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
 	coreVersion = '2.7.0-RC1'
-	dataGeodeVersion = '2.7.0-M2'
+	dataGeodeVersion = '2.7.0-RC1'
 	dataMongoDbVersion = coreVersion
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
