Upgrade Spring Session core modules to 2.6.3
Closes gh-205

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.6.3-SNAPSHOT'
+	coreVersion = '2.6.3'
 	dataGeodeVersion = '2.6.1'
 	dataMongoDbVersion = coreVersion
 	dataRedisVersion = coreVersion
