Upgrade Spring Session core modules to 2.5.6
Closes gh-204

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.5.6-SNAPSHOT'
+	coreVersion = '2.5.6'
 	dataMongoDbVersion = '2.5.0'
 	dataGeodeVersion = '2.5.6'
 	dataRedisVersion = coreVersion
