--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,6 +1,6 @@
 ext {
-	coreVersion = '2.6.3'
-	dataGeodeVersion = '2.6.1'
+	coreVersion = '2.6.4-SNAPSHOT'
+	dataGeodeVersion = '2.6.2-SNAPSHOT'
 	dataMongoDbVersion = coreVersion
 	dataRedisVersion = coreVersion
 	hazelcastVersion = coreVersion
