Update to Spring Session 2.7.0

--- a/gradle/dependency-management.gradle
+++ b/gradle/dependency-management.gradle
@@ -1,5 +1,5 @@
 ext {
-	coreVersion = '2.7.0-SNAPSHOT'
+	coreVersion = '2.7.0'
 	dataGeodeVersion = '2.7.0-SNAPSHOT'
 	dataMongoDbVersion = coreVersion
 	dataRedisVersion = coreVersion
