--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@ plugins {
 	id 'io.spring.convention.bom'
 	id 'io.spring.convention.root'
 }
+
+description = "Spring Session BOM"
 group = "org.springframework.session"
+
 
 dependencies {
 	constraints {
