--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 version=2022.0.0-SNAPSHOT
-springSessionCoreVersion=3.0.0-SNAPSHOT
+springSessionCoreVersion=3.0.0-RC1
 springSessionDataGeodeVersion=3.0.0-M3
