Next development version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=2021.2.3
+version=2021.2.4-SNAPSHOT
 springSessionCoreVersion=2.7.4
 springSessionDataGeodeVersion=2.7.1
 org.gradle.caching=true
